--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,7 @@
 
 language: android
 jdk: oraclejdk8
-# Turn off caching to avoid any caching problems
-cache: false
-# Don't use the Travis Container-Based Infrastructure - See #476
-sudo: false
+sudo: required
 
 cache:
   directories:
@@ -16,8 +13,8 @@ cache:
 env:
   global:
     - ANDROID_API_LEVEL=25
-    - EMULATOR_API_LEVEL=25
-    - ANDROID_BUILD_TOOLS_VERSION=25.0.1
+    - EMULATOR_API_LEVEL=24
+    - ANDROID_BUILD_TOOLS_VERSION=25.0.2
     - ANDROID_ABI=armeabi-v7a
     - ANDROID_TAG=google_apis
     - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default - see #247)
@@ -41,18 +38,48 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     # Specify at least one system image
-    - sys-img-armeabi-v7a-google_apis-$EMULATOR_API_LEVEL
+    - sys-img-$ANDROID_ABI-google_apis-$EMULATOR_API_LEVEL
 
 before_script:
+  - uname -a
+  - android list targets
+  - ls -la $HOME/.android/**/*
+  - ls -la $HOME/**/*
   # Create and start emulator
   - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - ls -la $HOME/.android/**/*
+  - ls -la $HOME/**/*
+  - cat $HOME/.android/avd/test.avd/config.ini
+  - cp res-src/avd_config.ini $HOME/.android/avd/test.avd/config.ini
+  - cat $HOME/.android/avd/test.avd/config.ini
   - emulator -avd test -no-skin -no-window &
-  - android-wait-for-emulator
+  - travis_wait 30 android-wait-for-emulator
+  # Previous command seems to end too early, so wait a bit more
+  # On multilined commands: https://gitlab.com/gitlab-org/gitlab-ci/issues/258 and http://stackoverflow.com/questions/3790454/in-yaml-how-do-i-break-a-string-over-multiple-lines
+  - |
+    while ! adb shell getprop init.svc.bootanim; do
+      echo Waiting for boot animation to end
+      sleep 10
+    done
+    # Another method. Should print SDK version number to console
+    # See http://stackoverflow.com/questions/28195080/unknown-api-level-error-when-trying-to-run-instrumentation-test
+  - |
+    while ! adb shell getprop ro.build.version.sdk; do
+      echo Waiting for ro.build.version.sdk value from device
+      sleep 10
+    done
+  - adb devices
   - adb shell input keyevent 82 &
 
 # Only run tests on the main two OneBusAway brand flavors
 script:
-  - travis_wait 60 ./gradlew connectedObaGoogleDebugAndroidTest connectedObaAmazonDebugAndroidTest -PdisablePreDex
+  - |
+    ./gradlew connectedObaGoogleDebugAndroidTest connectedObaAmazonDebugAndroidTest -PdisablePreDex
+    retval=$?
+    if [ $retval -ne 0 ]; then
+      echo "error on assembling, exit code: "$retval
+      exit $retval
+    fi
 
 notifications:
   webhooks:
